# PIAIC-GEN-AI

first_project/: pyproject.toml
first_project/first_project/: main.py
first_project/tests/: test_myproject.py
hello-world-online/: pyproject.toml
hello-world-online/hello_world_online/: main.py
hello-world-online/tests/: test_main.py
